syntax = "proto3";

package api.auth.v1;

option go_package = "github.com/ZTH7/RagoDesk/apps/server/api/auth/v1;v1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service ConsoleAuth {
  rpc Register(ConsoleRegisterRequest) returns (AuthResponse) {
    option (google.api.http) = {
      post: "/console/v1/register"
      body: "*"
    };
  }
  rpc Login(ConsoleLoginRequest) returns (AuthResponse) {
    option (google.api.http) = {
      post: "/console/v1/login"
      body: "*"
    };
  }
}

service PlatformAuth {
  rpc Login(PlatformLoginRequest) returns (AuthResponse) {
    option (google.api.http) = {
      post: "/platform/v1/login"
      body: "*"
    };
  }
}

message ConsoleLoginRequest {
  string account = 1;
  string password = 2;
  string tenant_id = 3;
}

message PlatformLoginRequest {
  string account = 1;
  string password = 2;
}

message ConsoleRegisterRequest {
  string tenant_name = 1;
  string tenant_type = 2;
  string admin_name = 3;
  string email = 4;
  string phone = 5;
  string password = 6;
}

message AuthProfile {
  string subject_id = 1;
  string tenant_id = 2;
  string account = 3;
  string name = 4;
  repeated string roles = 5;
}

message AuthResponse {
  string token = 1;
  google.protobuf.Timestamp expires_at = 2;
  AuthProfile profile = 3;
}
